--- a/index.html
+++ b/index.html
@@ -40,6 +40,7 @@
     <!-- Scene Scripts -->
     <script src="Scripts/scenes/menu.js"></script>
     <script src="Scripts/scenes/shooter.js"></script>
+    <script src="Scripts/scenes/tutorial.js"></script>
 
 
     <script src="Scripts/core/game.js"></script>
